// Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file. The original repo for
// this file is https://github.com/rosas/onex.
//

syntax = "proto3";

package fakeserver.v1; // 告诉编译器此文件使用什么版本的语法

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/rosas/onex/pkg/api/fakeserver/v1;v1";

service FakeServer {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders",
      body: "*",
    };
  }

  rpc ListOrder(ListOrderRequest) returns (ListOrderResponse) {
    option (google.api.http) = {get: "/v1/orders"};
  }

  rpc GetOrder(GetOrderRequest) returns (OrderReply) {
    option (google.api.http) = {get: "/v1/orders/{orderID}"};
  }

  rpc UpdateOrder(UpdateOrderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/orders/{orderID}",
      body: "*",
    };
  }

  rpc DeleteOrder(DeleteOrderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/v1/orders/{orderID}"};
  }
}

message CreateOrderRequest {
  string customer = 1; 
  string product = 2; 
  int64 quantity = 3; 
}

message CreateOrderResponse {
  string orderID = 1;
}

message OrderReply {
  string orderID = 1; // 订单 ID
  string customer = 2; // 顾客姓名
  string product = 3; // 产品名称
  int64 quantity = 4; // 购买数量
  google.protobuf.Timestamp createdAt = 5; // 创建时间
  google.protobuf.Timestamp updatedAt = 6; // 更新时间
}

message DeleteOrderRequest {
  string orderID = 1;
}

message UpdateOrderRequest {
  string orderID = 1;

  optional string customer = 2;
  optional string product = 3;
  optional int64 quantity = 4;
}

message ListOrderRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ListOrderResponse {
  int64 totalCount = 1;
  repeated OrderReply Orders = 2;
}

message GetOrderRequest {
  string orderID = 1;
}
